// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`collect 1`] = `
{
  "f": [
    [
      "FOO",
      "f2",
    ],
    [
      "BAR",
      "f1",
    ],
  ],
}
`;

exports[`collect 2`] = `
{
  "f": [
    [
      "FOO",
      "f2",
    ],
    [
      "BAR",
      "f1",
    ],
  ],
}
`;

exports[`flushing 1`] = `
{
  "f": [
    [
      "type",
      "FLUSH",
    ],
  ],
}
`;

exports[`flushing 2`] = `
{
  "f": [
    [
      "type",
      "FOO",
    ],
  ],
}
`;

exports[`flushing 3`] = `
{
  "f": [
    [
      "type",
      "FLUSH",
    ],
  ],
}
`;

exports[`flushing 4`] = `
{
  "f": [
    [
      "type",
      "BAR",
    ],
  ],
}
`;

exports[`flushing 5`] = `
{
  "f": [
    [
      "type",
      "FLUSH",
    ],
  ],
}
`;

exports[`map 1`] = `
{
  "f": [
    [
      "type",
      "FOO",
    ],
    [
      "value",
      "f1",
    ],
  ],
}
`;

exports[`map 2`] = `
{
  "f": [
    [
      "type",
      "BAZ",
    ],
    [
      "value",
      {
        "f": [
          [
            "type",
            "BAR",
          ],
          [
            "value",
            "f1",
          ],
        ],
      },
    ],
  ],
}
`;

exports[`map 3`] = `
{
  "f": [
    [
      "type",
      "FOO",
    ],
    [
      "value",
      "f2",
    ],
  ],
}
`;

exports[`map 4`] = `
{
  "f": [
    [
      "type",
      "BAZ",
    ],
    [
      "value",
      {
        "f": [
          [
            "type",
            "BAR",
          ],
          [
            "value",
            "f1",
          ],
        ],
      },
    ],
  ],
}
`;

exports[`map 5`] = `
{
  "f": [
    [
      "type",
      "FLUSH",
    ],
  ],
}
`;

exports[`map 6`] = `
{
  "f": [
    [
      "type",
      "BAZ",
    ],
    [
      "value",
      {
        "f": [
          [
            "type",
            "BAR",
          ],
          [
            "value",
            "f1",
          ],
        ],
      },
    ],
  ],
}
`;

exports[`map 7`] = `
{
  "f": [
    [
      "type",
      "FLUSH",
    ],
  ],
}
`;

exports[`pipe 1`] = `
{
  "f": [
    [
      "type",
      "FOO",
    ],
    [
      "value",
      "f1--s-foo",
    ],
  ],
}
`;

exports[`pipe 2`] = `
{
  "f": [
    [
      "type",
      "BAR",
    ],
    [
      "value",
      "f1--s-bar",
    ],
  ],
}
`;

exports[`pipe 3`] = `
{
  "f": [
    [
      "type",
      "FOO",
    ],
    [
      "value",
      "f2--s-foo",
    ],
  ],
}
`;

exports[`pipe 4`] = `
{
  "f": [
    [
      "type",
      "BAR",
    ],
    [
      "value",
      "f1--s-bar",
    ],
  ],
}
`;

exports[`pipe 5`] = `
{
  "f": [
    [
      "type",
      "FLUSH",
    ],
  ],
}
`;

exports[`pipe 6`] = `
{
  "f": [
    [
      "type",
      "BAR",
    ],
    [
      "value",
      "f1--s-bar",
    ],
  ],
}
`;

exports[`pipe 7`] = `
{
  "f": [
    [
      "type",
      "FLUSH",
    ],
  ],
}
`;
